--- a/Happersett_Final/Web.config
+++ b/Happersett_Final/Web.config
@@ -30,4 +30,16 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IHappersett_product" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:51923/Happersett_product.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IHappersett_product"
+        contract="ServiceReference1.IHappersett_product" name="BasicHttpBinding_IHappersett_product" />
+    </client>
+  </system.serviceModel>
 </configuration>
