--- a/Happersett_Final/Happersett_Final.csproj
+++ b/Happersett_Final/Happersett_Final.csproj
@@ -88,7 +88,7 @@
     <None Include="Connected Services\ServiceReference1\Happersett_product2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="Site1.Master" />
+    <Content Include="Happersett.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -97,9 +97,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Happersett_A.aspx" />
-    <Content Include="Product_Details.aspx" />
-    <Content Include="QuestionB.aspx" />
+    <Content Include="Q_A\Happersett_A.aspx" />
+    <Content Include="Q_A\Product_Details.aspx" />
+    <Content Include="Q_B\QuestionB.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -110,37 +110,37 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="DataAccess.cs" />
-    <Compile Include="Happersett_A.aspx.cs">
+    <Compile Include="Q_A\DataAccess.cs" />
+    <Compile Include="Q_A\Happersett_A.aspx.cs">
       <DependentUpon>Happersett_A.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Happersett_A.aspx.designer.cs">
+    <Compile Include="Q_A\Happersett_A.aspx.designer.cs">
       <DependentUpon>Happersett_A.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Prod.cs" />
-    <Compile Include="ProdList.cs" />
-    <Compile Include="Product_Details.aspx.cs">
+    <Compile Include="Q_A\Prod.cs" />
+    <Compile Include="Q_A\ProdList.cs" />
+    <Compile Include="Q_A\Product_Details.aspx.cs">
       <DependentUpon>Product_Details.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Product_Details.aspx.designer.cs">
+    <Compile Include="Q_A\Product_Details.aspx.designer.cs">
       <DependentUpon>Product_Details.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuestionB.aspx.cs">
+    <Compile Include="Q_B\QuestionB.aspx.cs">
       <DependentUpon>QuestionB.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="QuestionB.aspx.designer.cs">
+    <Compile Include="Q_B\QuestionB.aspx.designer.cs">
       <DependentUpon>QuestionB.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Site1.Master.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="Happersett.Master.cs">
+      <DependentUpon>Happersett.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Site1.Master.designer.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="Happersett.Master.designer.cs">
+      <DependentUpon>Happersett.Master</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
